--- a/boi/templates/boi/listamorte.html
+++ b/boi/templates/boi/listamorte.html
@@ -1,59 +1,71 @@
 {% extends 'base.html' %}
 
-{% block title %}Lista de Bois{% endblock %}
+{% block title %}Lista de Bois Mortos{% endblock %}
 
 {% block content %}
+<div class="lista-container">
+  <div class="lista-header">
+    <h1 class="lista-titulo">Lista de Bois Mortos</h1>
+    <form method="get" action="" class="lista-busca">
+      <input 
+        type="text" 
+        name="search" 
+        placeholder="Buscar boi..." 
+        value="{{ request.GET.search }}" 
+        class="input-busca"
+      >
+      <button type="submit" class="botao-acao botao-buscar">Buscar</button>
+      <a href="{% url 'listamorte' %}" class="botao-acao botao-limpar">Limpar</a>
+    </form>
+  </div>
 
-    <div class="list-container">
-        <h1>Lista de Bois Mortos </h1>
-    
-        <div>
-            <form method="get" action="" class="search-form">
-                <input type="text" name="search" placeholder="Buscar boi" value="{{ request.GET.search }}" class="search-input">
-                <button type="submit" class="btn search-button">Buscar</button>
-                <button><a href="{% url 'listaboi' %}" class="btn clear-button">Limpar</a></button>
-            </form>
-        </div>
-    
-        <table class="list-table">
-            <thead>
-                <tr>
-                    <th>Brinco</th>
-                    <th>Fornecedor</th>
-                    <th>Raça</th>
-                    <th>Sexo</th>
-                    <th>Peso Entrada (kg)</th>
-                    <th>Data Nasc.</th>
-                    <th>Data Entrada</th>
-                    <th>Status</th>
-                    <th>Lote</th>
-                </tr>
-            </thead>
-            <tbody>                                                 
-                {% if bois %}
-                    {% for boi in bois %}
-                        <tr onclick="window.location.href='{% url 'detalheboi' pk=boi.pk %}'" style="cursor: pointer;">
-                            <td>{{ boi.brinco }}</td>
-                            <td>{{ boi.fornecedor }}</td>
-                            <td>{{ boi.raca }}</td>
-                            <td>{{ boi.sexo }}</td>
-                            <td>{{ boi.peso_entrada }}</td>
-                            <td>{{ boi.data_nascimento }}</td>
-                            <td>{{ boi.data_entrada }}</td>
-                            <td>{{ boi.get_status_boi_display }}</td>
-                            <td>{{ boi.lote }}</td>
-                            <td style="text-align: right;">
-                                <button><a href="{% url 'boimorte' pk=boi.pk %}" class="black-button">Morte</a></button>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                {% else %}
-                    <tr>
-                        <td colspan="13" class="no-results">Nenhum boi encontrado.</td>
-                    </tr>
-                {% endif %}
-            </tbody>
-        </table>
-    </div>
-    
+  <div class="tabela-wrapper">
+    <table class="tabela-lista">
+      <thead>
+        <tr>
+          <th>Brinco</th>
+          <th>Fornecedor</th>
+          <th>Raça</th>
+          <th>Sexo</th>
+          <th>Peso Entrada (kg)</th>
+          <th>Data Nasc.</th>
+          <th>Data Entrada</th>
+          <th>Status</th>
+          <th>Lote</th>
+          <th>Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% if bois %}
+          {% for boi in bois %}
+            <tr onclick="window.location.href='{% url 'detalheboi' pk=boi.pk %}'" class="linha-tabela">
+              <td>{{ boi.brinco }}</td>
+              <td>{{ boi.fornecedor }}</td>
+              <td>{{ boi.raca }}</td>
+              <td>{{ boi.sexo }}</td>
+              <td>{{ boi.peso_entrada }}</td>
+              <td>{{ boi.data_nascimento }}</td>
+              <td>{{ boi.data_entrada }}</td>
+              <td>{{ boi.status_boi.nome_status }}</td>
+              <td>{{ boi.lote }}</td>
+              <td>
+                <a 
+                  href="{% url 'boimorte' pk=boi.pk %}" 
+                  class="botao-acao botao-morte"
+                  onclick="event.stopPropagation();"
+                >
+                  Morte
+                </a>
+              </td>
+            </tr>
+          {% endfor %}
+        {% else %}
+          <tr>
+            <td colspan="10" class="sem-registro">Nenhum boi encontrado.</td>
+          </tr>
+        {% endif %}
+      </tbody>
+    </table>
+  </div>
+</div>
 {% endblock %}
