--- a/curral/templates/curral/listacurral.html
+++ b/curral/templates/curral/listacurral.html
@@ -3,40 +3,50 @@
 {% block title %}Lista de Currais{% endblock %}
 
 {% block content %}
-
-<div class="list-container">
-    <h1>Lista de Currais</h1>    
-    <form method="get" action="" class="search-form">
-        <input type="text" name="search" placeholder="Buscar curral" value="{{ request.GET.search }}" class="search-input">
-        <input type="submit" value="Buscar" class="btn search-button">
-        <a href="{% url 'listacurral' %}" class="btn clear-button">Limpar</a>
-        <a href="{% url 'criarcurral' %}" class="btn add-button">Adicionar</a>
+<div class="lista-container">
+  <div class="lista-header">
+    <h1 class="lista-titulo">Lista de Currais</h1>
+    <form method="get" action="" class="lista-busca">
+      <input 
+        type="text" 
+        name="search" 
+        placeholder="Buscar..." 
+        value="{{ request.GET.search }}" 
+        class="input-busca"
+      >
+      <button type="submit" class="botao-acao botao-buscar">Buscar</button>
+      <a href="{% url 'listacurral' %}" class="botao-acao botao-limpar">Limpar</a>
+      <a href="{% url 'criarcurral' %}" class="botao-acao botao-adicionar">Adicionar</a>
     </form>
-    <table class="list-table">
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>Peso Mínimo</th>
-                <th>Peso Máximo</th>
-                <th>Tipo de Curral</th>
+  </div>
+
+  <div class="tabela-wrapper">
+    <table class="tabela-lista">
+      <thead>
+        <tr>
+          <th>Nome</th>
+          <th>Peso Mínimo</th>
+          <th>Peso Máximo</th>
+          <th>Tipo de Curral</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% if currais %}
+          {% for curral in currais %}
+            <tr onclick="window.location.href='{% url 'detalhecurral' pk=curral.pk %}'" class="linha-tabela">
+              <td>{{ curral.nome_curral }}</td>
+              <td>{{ curral.peso_min }}</td>
+              <td>{{ curral.peso_max }}</td>
+              <td>{{ curral.tipo_curral.nome_tipo_curral }}</td>
             </tr>
-        </thead>
-        <tbody>
-            {% if currais %}
-                {% for curral in currais %}
-                    <tr onclick="window.location.href='{% url 'detalhecurral' pk=curral.pk %}'" style="cursor: pointer;">
-                        <td>{{ curral.nome }}</td>
-                        <td>{{ curral.peso_min }}</td>
-                        <td>{{ curral.peso_max }}</td>
-                        <td>{{ curral.curral_type.tipo_curral }}</td>
-                    </tr>
-                {% endfor %}
-            {% else %}
-                <tr>
-                    <td colspan="4" class="no-results">Nenhum curral encontrado.</td>
-                </tr>
-            {% endif %}
-        </tbody>
+          {% endfor %}
+        {% else %}
+          <tr>
+            <td colspan="4" class="sem-registro">Nenhum registro encontrado.</td>
+          </tr>
+        {% endif %}
+      </tbody>
     </table>
+  </div>
 </div>
 {% endblock %}
