--- a/movimentacao/templates/movimentacao/criarmovimentacao.html
+++ b/movimentacao/templates/movimentacao/criarmovimentacao.html
@@ -18,7 +18,7 @@
         
         <div class="form-actions">
             <button type="submit" class="botao-acao botao-adicionar">Confirmar Troca</button>
-            <a href="#" class="botao-acao botao-limpar">Cancelar</a> {#  Substitua '#' pela URL de listagem apropriada  #}
+            <a href="{% url 'listamovimentacao' %}" class="botao-acao botao-limpar">Cancelar</a> 
         </div>
     </form>
 </div>
