--- a/app/templates/home/base.html
+++ b/app/templates/home/base.html
@@ -1,3 +1,5 @@
+{% if user.is_authenticated %}
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -77,7 +79,7 @@
           <li class="submenu-item">Histórico Animal</li>
           <li class="submenu-item">Doenças Recorrentes</li>
           <li class="submenu-item">Animais Medicados</li>
-          <li class="submenu-item">Animais Manejados</li>
+          <li class="submenu-item"><a href='{% url 'relatoriomedia' %}'>Animais Manejados</a></li>
         </ul>
       </li>
       <li class="menu-item">
@@ -132,3 +134,5 @@
   
 </body>
 </html>
+
+{% endif %}
