--- a/boi/templates/boi/nascimentoboi.html
+++ b/boi/templates/boi/nascimentoboi.html
@@ -11,6 +11,12 @@
                 {{ form.brinco.label_tag }}
                 {{ form.brinco }}
             </div>
+
+            <div class="form-group">
+                {{ form.chip.label_tag }}
+                {{ form.chip }}
+            </div>
+
             <div class="form-group">
                 {{ form.fornecedor.label_tag }}
                 {{ form.fornecedor }}
